Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-30410

QtQuick VideoOutput ignores the video format's viewport

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.1.0
    • 5.0.1
    • Multimedia
    • None
    • 0d9526b5c9740d3d77d9c4d8403a6f9e7370643f

    Description

      When sending video frames into a VideoOutput item via QAbstractVideoSurface, you can specify a viewport in the format. VideoOutput seems to ignore it.

      There's a comment in qdeclarativevideooutput.cpp (inside QDeclarativeVideoOutput::sourceRect()), which I'm assuming is relevant:

      return QRectF(QPointF(), size); // XXX ignores viewport
      

      Attachments

        1. border-fix.diff
          2 kB
        2. videooutput-viewport.zip
          3 kB
        3. with-half-pixel.png
          with-half-pixel.png
          145 kB
        4. without-half-pixel.png
          without-half-pixel.png
          154 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tmcguire Thomas McGuire
            jfaust Josh Faust
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes